--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -221,7 +221,7 @@ comporta come supervisore di certe attività.
 \subsection{Il problema della trasparenza}
 Esistono diversi signicati per la trasparenza: per esempio, si intende per l'allocazione l'indipendenza dalla località
 delle risorse. In generale, per trasparenza si
-intende un sistema in grado di fornire all'utente nale un comportamento omogeneo, anche se ai livelli sottostanti sta
+intende un sistema in grado di fornire all'utente finale un comportamento omogeneo, anche se ai livelli sottostanti sta
 lavorando con oggetti/servizi diversi
 (remoti/locali, server principale/copia, . . . ).
 11
