--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -447,7 +447,7 @@ presentazione dei dati (XML o formato binario: leggibilit` o efficienza
 . . . ).
 $\bullet$ Sistema a plug-in: si tratta della possibilità di estendere il mw, introa
 ducendo dei gestori per azioni particolari di determinati protocolli (per
-esempio, per eseguire certi compiti prima dell'invoke nale).25
+esempio, per eseguire certi compiti prima dell'invoke finale).25
 $\bullet$ Il mw può anche gestire insiemi/gruppi di oggetti, fornendo quindi un
 supporto alla replicazione (gruppi diversi, QoS diversa).
 $\bullet$ Presenza di pseudo-oggetti : non sono oggetti veri e propri, ma entità speca
