--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -64,7 +64,7 @@ degli intermediari a supporto: a seconda del carico di lavoro presente su di lor
 il tempo di latenza può variare notevolmente! E quindi necessario pensare anche
 a una QoS distribuita fra i vari nodi !
 Lo skew rappresentalo sfasamento fra due flussi, che dovrebbero essere invece
-percepiti come una singola entità dall'utente nale (per esempio, discrepanze
+percepiti come una singola entità dall'utente finale (per esempio, discrepanze
 nella velocit` fra audio e video).
 Spesso, in realtà, la QoS è un parametro che è trascurato in fase progeta
 tuale, nonostante sia un obiettivo. Questo perché durante lo sviluppo si hanno
