--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -312,7 +312,7 @@ sente un altro tipo di pseudo-object detto ServerRequest, mediante il quale si p
 specificare le operazioni, parametri e contesti da aggiungere! L'idea è che queste
 informazioni si debbano agganciare ad un'interfaccia che esiste già. Quindi, ci
 si collega all'IR per ottenere un'implementazione già presente, e ci si registra
-presso l'IR come sistema in grado di rispondere (il servant si potr` usare sia in
+presso l'IR come sistema in grado di rispondere (il servant si potrà usare sia in
 richieste statiche che dinamiche!).
 \subsection{Politiche dei riferimenti di CORBA}
 CORBA si basa totalmente sull'uso degli ObjRef. CORBA fornisce quindi dei
