--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -364,7 +364,7 @@ inferiori localmente dalle singole entità.
 Nonostante il costo, i servizi integrati lavorano proprio al livello applicativo
 (OSI), proprio perché a questo livello le risorse sono note e si possono valutare:
 questo signica che su ogni nodo si lavorer` a livello applicativo, in maniera tale
-da poter individuare fra i possibili cammini il cammino migliore, che divverr` ata
+da poter individuare fra i possibili cammini il cammino migliore, che divverrà ata
 tivo. Per far ciò si utilizza un protocollo detto Reservation Protocol ; questo proo
 tocollo infatti permette di specificare un cammino attivo in grado di rispettare
 una determinata SLA, senza considerare il traffico corrente, ovvero permette di
